# CIFAR-lightning

./: .gitignore  README.md  setup.cfg  setup.py
cifar/: __init__.py  base.py  noisy.py  semi.py  utils.py
noisy_cifar/: __init__.py  index_choice.py  noisify.py  noisy_cifar.py  noisy_cifar10.py  transition_matrix.py  utils.py
src/deficient_cifar/: __init__.py  base.py  noisy.py  semi.py  utils.py
src/dual_cifar/: base.py  noisy.py  semi.py
src/noisy_cifar/: datasets.py
src/synthetic_noisy_datasets/: __init__.py  cifar.py  datamodules.py  datasets.py  utils.py
src/synthetic_noisy_datasets/labels/: __init__.py
test/: test.py
tests/: test_data_modules.py  test_datamodules.py  test_datasets.py  test_labels.py  test_transition_matrix.py
