[metadata]
name = dual-cifar-lightning
version = 0.0.1
author = Holim Lim
author_email = ihl7029@europa.snu.ac.kr
description = CIFAR datasets for SSL&LNL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Holim0711/CIFAR-lightning
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src